sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: identifier expected but ']' found.
  var tableau = int[];
                    ^AlgBubbleSort1:3: error: ']' expected but ';' found.
  var tableau = int[];
                     ^